fix ptint media on dark mode

--- a/assets/css/colors-dark.scss
+++ b/assets/css/colors-dark.scss
@@ -7,3 +7,9 @@
   @include colors;
   @include dark-colors;
 }
+
+@media print {
+  :root {
+    @include light-colors;
+  }
+}
